--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Welcome to Airport</h1>
 <ul>
-    <li><a href="/airports">Airport Index</a></li>
-    <li><a href="/airports/new">New Airport</a></li>
+    <li><a href="/airlines">Airline Index</a></li>
+    <li><a href="/airlines/new">New Airline</a></li>
 </ul>
