--- a/app/views/airlines/show.html.erb
+++ b/app/views/airlines/show.html.erb
@@ -5,3 +5,4 @@
 <strong><p><%="Airline ID = #{@airline.id}"%></p>
 <p><%= "#{@airline.on_time ? 'All Flights On Time' : 'Some Flights Experiencing Delays'}" %></p>
 <p><%= "Airline Rating = #{@airline.rating}"%></strong></div></p>
+<p><%= "Total Number of Flights: #{@airline.flights_count}" %></p>
