write TEST for child show update link

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -22,7 +22,7 @@ td {
 <% @flights.each do |flight|%>
   <section id = "Flight-<%=flight.id%>">
     <tr>
-      <td><%="Flight #{flight.id}"%></td>
+      <td><%=link_to "Flight #{flight.id}", "/flights/#{flight.id}"%></td>
       <td><%="#{flight.destination}"%></td>
       <td><%="#{flight.airline.name}"%></td>
       <td><%="#{flight.nonstop}"%></td>
