create nonstop tests

--- a/app/views/flights/nonstop_flights.html.erb
+++ b/app/views/flights/nonstop_flights.html.erb
@@ -10,9 +10,8 @@ td {
 </style>
 </head>
 <body>
-<h2>All Flights</h2><br>
-<%= link_to "Nonstop Flights Only", "/flights/nonstop" %>
-
+<h2>Nonstop Flights</h2><br>
+<%= link_to "All Flights", "/flights" %>
 
 <table>
   <tr>
@@ -33,7 +32,6 @@ td {
     </tr>
   </section>
 <% end %>
-
 </table>
 </body>
 </html>
