create delete button for flights show

--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -32,5 +32,6 @@ td {
   </tr>
 </table>
   </section>
+  <p><%= button_to "Delete Flight", "/flights/#{@flight.id}", method: :delete %></p>
 </body>
 </html>
