Final Commit - code cleanup

--- a/app/views/airlines/show.html.erb
+++ b/app/views/airlines/show.html.erb
@@ -1,5 +1,4 @@
 <h1><%= "#{@airline.name}"%></h1>
-
 <div>
 <h2>Airline Information:</h2>
 <strong><p><%="Airline ID = #{@airline.id}"%></p>
@@ -9,5 +8,4 @@
 <p><%= button_to "Flight Listings", "/airlines/#{@airline.id}/flights" %></p>
 <p><%= button_to "Update Airline", "/airlines/#{@airline.id}/edit", method: :get %></p>
 <p><%= button_to "Delete Airline", "/airlines/#{@airline.id}", method: :delete %></p>
-
-<p>
+</div>
